alignment correction

--- a/styles/mentoria.css
+++ b/styles/mentoria.css
@@ -68,7 +68,7 @@ h3 {
   display: grid;
 }
 
-.card__content {
+.cards {
   place-content: center;
   box-shadow: 0 0 5px 0.5px rgb(147, 147, 150);
   font-size: 16px;
@@ -77,8 +77,11 @@ h3 {
   border-radius: 1rem;
   width: 160px;
   height: 94px;
-  padding: 1.5rem 0 1.5rem 0;
+  display: flex;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
   text-align: center;
+  align-items: center;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
 }
